k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dmd-production
  labels:
    name: dmd-production
    environment: production
